# linalg-benchmarks

./: .gitignore  README.md
gonum-matrix/: README.md  benchmarks_test.go
hmatrix/: LICENSE  README.md  hmatrix-benchmarks.cabal  stack.yaml
hmatrix/app/: Main.hs
laswift/: Package.swift  README.md
numpy/: README.md  numpy-bencmarks.py
octave/: README.md  bench.m  benchmarks.m  max_index.m  mult.m  relu.m  scale_time.m  sigmoid.m  transpose.m
swift/: README.md
