name:                hmatrix-benchmarks
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alexander-ignatyev/linarg-benchmarks
license:             BSD3
license-file:        LICENSE
author:              Alexander Ignatyev
maintainer:          ignatyev.alexander@gmail.com
copyright:           Alexander Ignatyev
category:            math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable hmatrix-benchmarks
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O
  build-depends:       base
                     , vector
                     , hmatrix
                     , hmatrix-morpheus
                     , criterion
  default-language:    Haskell2010
  default-extensions:  BangPatterns

source-repository head
  type:     git
  location: https://github.com/alexander-ignatyev/linarg-benchmarks
